fixed image-container and inout field. Please align inouts with texarea

--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@
 
 .main-container {
     background-color: var(--first-color);
-    padding: 20px;
+    padding: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
 
 }
 
@@ -30,14 +30,18 @@
     object-fit: cover;
     /* border-radius: 50%; */
     transition: transform 0.5s;
+    margin-left: 150px;
 }
-
+/* .image-container {
+  height: 100vh;
+   */
 .teachers-button {
     width: 400px;
     background-color: var(--second-color);
     color: white;
     padding: 10px 20px;
-    margin: 20px auto;
+    margin-left: 150px;
+    margin-top: 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -140,6 +144,7 @@ textarea {
     margin: 8px 0;
     box-sizing: border-box;
     border: 2px solid var(--second-color);
+    outline: none;
 
   }
 
@@ -154,6 +159,7 @@ textarea {
 
   input:focus {
     background-color: var(--first-color);
+    border: 2px solid var(--second-color);
   }
 
   .book-now-btn {
